--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://fayozbekdew.github.io/uzbekistan-region",
   "name": "uzbekistan-regions-react",
   "private": true,
   "version": "0.0.0",
@@ -12,7 +13,6 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
-    "react-image-magnify": "^2.7.4",
     "react-router-dom": "^6.9.0",
     "swiper": "^9.1.1"
   },
@@ -20,6 +20,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "gh-pages": "^5.0.0",
     "vite": "^4.2.0"
   }
 }
